Change Differ.java        DifferTest.java